bynkc/tests/fixtures/positive/105_context_test_with_consumed_mock/src/commerce/payment.bynk
context commerce.payment {
  exports opaque { AuthId }
  exports transparent { PaymentError }

  type AuthId = opaque String
  type PaymentError = | Declined

  capability Logger {
    fn log(msg: String) -> Effect[()]
  }

  provides Logger = NoOpLogger {
    fn log(msg: String) -> Effect[()] {
      ()
    }
  }

  service authorise {
    on call(amount: Int) -> Effect[Result[AuthId, PaymentError]] given Logger {
      let _ <- Logger.log("authorise")
      Ok(AuthId.unsafe("AUTH-DEFAULT"))
    }
  }
}
